<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_slotmachine"
    tools:context="com.fiap.filipe.slotmachine.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:src="@drawable/pokemon_logo"
        android:id="@+id/ivLogo"
        android:layout_marginBottom="@dimen/margin_logo_login"
        android:layout_marginTop="@dimen/default_dp"/>

    <ImageView
        android:layout_width="75dp"
        android:layout_height="150dp"
        android:background="@drawable/ash"
        android:id="@+id/ivChar"
        android:layout_below="@+id/ivLogo"
        android:layout_centerInParent="true"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/llRadio"
        android:layout_below="@+id/ivChar"
        android:layout_marginBottom="@dimen/default_dp">

        <RadioButton
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:text="@string/ash"
            android:id="@+id/rbAsh"
            android:layout_weight="0.5"
            android:onClick="changeImage"/>

        <RadioButton
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:text="@string/may"
            android:id="@+id/rbMay"
            android:layout_weight="0.5"
            android:onClick="changeImage"/>

    </RadioGroup>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etNome"
        android:layout_below="@+id/llRadio"
        android:hint="@string/seu_nome_aqui"
        android:layout_marginLeft="@dimen/default_dp"
        android:layout_marginRight="@dimen/default_dp"
        android:layout_marginBottom="@dimen/default_dp"
        android:padding="5dp"
        android:background="@drawable/slot_background"/>



    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/number_array"
        android:id="@+id/spFichas"
        android:layout_below="@+id/etNome"
        android:hint="@string/numero_de_fichas"
        android:layout_marginLeft="@dimen/default_dp"
        android:layout_marginRight="@dimen/default_dp"
        android:layout_marginBottom="50dp"
        android:padding="5dp"
        android:background="@drawable/slot_background"/>

    <info.hoang8f.widget.FButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        fbutton:buttonColor="@color/button_color"
        fbutton:cornerRadius="5dp"
        fbutton:shadowColor="#e67e22"
        fbutton:shadowEnabled="true"
        fbutton:shadowHeight="5dp"
        android:text="@string/jogar"
        style="@style/fbutton_style"
        android:onClick="jogar"
        android:id="@+id/btJogar"
        android:layout_below="@+id/spFichas"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desenvolvido_por_filipe_pinato_aguiar"
        android:textAlignment="center"
        android:textStyle="bold"
        android:id="@+id/tvDev"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
